Add posts table and basic post functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <header></header>
         <nav id="navbar">
             <div>
-                <a href="/">Home</a>
+                <a href="/home">Home</a>
             </div>
             {% if session['user_id'] %}
             <div>
