--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,6 @@
 <div class="container-homepage">
     <h1>Hello World</h1>
     <p>Join the fastest growing cullinary network in Australia</p>
+    <p>test</p>
 </div>
 {% endblock %}
