--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,30 @@
 {% extends "base.html" %} {% block content %}
 <main>
-    <section></section>
+    {% for post in posts%}
+    <section class="user-post">
+        <div class="user-post-body">
+            <img src="" alt="avatar" />
+            <h3 class="user-post-username"><a href="">{{post[3]}} {{post[4]}}</a></h5>
+            <p>Date Submitted:</p>
+            <p class="user-post-datestamp">{{ post[1] }}</p>
+            <p class="user-post-content">{{ post[0] }}</p>
+        </div>
+    </section>
+    {% endfor%}
+    <div>
+        <form action="/post/create" method="POST">
+            <div>
+                <label for="make-post">Make a Post</label>
+                <input type="text" name="post-content" id="post-content" />
+            </div>
+            <div>
+                <label for="category">Category</label>
+                <input type="text" name="category" id="category" />
+            </div>
+            <div>
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
 </main>
 {% endblock %}
