--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -23,8 +23,124 @@
         <input type="text" id="location" name="location" />
     </div>
     <div>
-        <label for="avatar">Avatar</label>
-        <input type="text" id="avatar" name="avatar" />
+        <!-- <label for="avatar">Avatar</label>
+        <select id="avatar" name="avatar" />
+        <option value="Chef"></option> -->
+        <fieldset>
+            <legend>Please select Avatar</legend>
+            <input
+                type="radio"
+                name="avatar"
+                id="male-chef"
+                value="../../static/images/chef-male.png"
+            />
+            <label for="Male Chef">
+                <img
+                    src="../../static/images/chef-male.png"
+                    alt="Male Chef"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="female-chef"
+                value="../../static/images/chef-female.png"
+            />
+            <label for="Female Chef">
+                <img
+                    src="../../static/images/chef-female.png"
+                    alt="Female Chef"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="male-bartender"
+                value="../../static/images/bartender-male.png"
+            />
+            <label for="Male Bartender">
+                <img
+                    src="../../static/images/bartender-male.png"
+                    alt="Male Bartender"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="female-bartender"
+                value="../../static/images/bartender-female.png"
+            />
+            <label for="Female Bartender">
+                <img
+                    src="../../static/images/bartender-female.png"
+                    alt="Female Bartender"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="waiter"
+                value="../../static/images/waiter.png"
+            />
+            <label for="Waiter">
+                <img
+                    src="../../static/images/waiter.png"
+                    alt="Waiter"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="Waitress"
+                value="../../static/images/waitress.png"
+            />
+            <label for="Waitress">
+                <img
+                    src="../../static/images/waitress.png"
+                    alt="Waitress"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="male-barista"
+                value="../../static/images/barista-male.png"
+            />
+            <label for="Male Barista">
+                <img
+                    src="../../static/images/barista-male.png"
+                    alt="Male Barista"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+            <input
+                type="radio"
+                name="avatar"
+                id="female-barista"
+                value="../../static/images/barista-female.png"
+            />
+            <label for="Femmale Barista">
+                <img
+                    src="../../static/images/barista-female.png"
+                    alt="Female Barista"
+                    width="100px"
+                    height="100px"
+                />
+            </label>
+        </fieldset>
     </div>
     <div>
         <button type="submit">Sign up</button>
