--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,41 @@
         <footer>
             &copy; Copyright 2022 by
             <a href="https://github.com/christoller">Chris Toller</a>
+            <div id="attributions">
+                <div>
+                    Icons made by
+                    <a
+                        href="https://www.flaticon.com/authors/amethystdesign"
+                        title="AmethystDesign"
+                        >AmethystDesign</a
+                    >,
+                    <a
+                        href="https://www.flaticon.com/authors/monkik"
+                        title="monkik"
+                        >monkik</a
+                    >,
+
+                    <a
+                        href="https://www.flaticon.com/authors/bakuh-huda"
+                        title="Bakuh Huda"
+                        >Bakuh Huda</a
+                    >,
+
+                    <a
+                        href="https://www.flaticon.com/authors/kosonicon"
+                        title="kosonicon"
+                        >kosonicon</a
+                    >
+                    and
+
+                    <a href="https://www.freepik.com" title="Freepik">Freepik</a
+                    >, from
+                    <a href="https://www.flaticon.com/" title="Flaticon"
+                        >www.flaticon.com</a
+                    >
+                </div>
+            </div>
         </footer>
-        <script src="" async defer></script>
+        <script src="/scripts/app.js" async defer></script>
     </body>
 </html>
