--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,9 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title></title>
-        <meta name="description" content="" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="/static/styles.css" />
-    </head>
-    <body>
-        <div class="container-homepage">
-            <h1>Hello World</h1>
-            <p>Join the fastest growing cullinary network in Australia</p>
-        </div>
-        <script src="" async defer></script>
-    </body>
-</html> -->
 {% extends "base.html" %} {% block content %}
 <div class="container-homepage">
-    <h1>Hello World</h1>
-    <p>Join the fastest growing cullinary network in Australia</p>
-    <p>test</p>
+    <div id="homepage-content">
+        <h1>Hello World</h1>
+        <p>Join the fastest growing cullinary network in Australia</p>
+        <p>test</p>
+    </div>
 </div>
-{% endblock %}
+{% include 'footer.html' %}{% endblock %}
