--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,24 +1,34 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
-<form action="/login/create" method="POST">
-    <h2>Login</h2>
-    {% with messages = get_flashed_messages() %} {% if messages %}
-    <ul class="flashes">
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %} {% endwith %}
-    <div>
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" />
+<main id="login-main">
+    <div id="login-face">
+        <p>Join the worlds fastest growing message board.</p>
     </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="text" id="password" name="password" />
+    <div id="login-block">
+        <form action="/login/create" method="POST">
+            <h2 id="login-header">Login</h2>
+            {% with messages = get_flashed_messages() %} {% if messages %}
+            <ul class="flashes">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %} {% endwith %}
+            <div class="login-inputs">
+                <label for="email">Email</label>
+                <input type="text" id="login-email" name="email" />
+            </div>
+            <div class="login-inputs">
+                <label for="password">Password</label>
+                <input type="password" id="login-password" name="password" />
+            </div>
+            <div class="login-btn-div">
+                <button type="submit" id="login-btn">Login</button>
+            </div>
+        </form>
+        <div id="login-signup-link">
+            <a href="/signup">Don't have an account? Click here to sign up</a>
+        </div>
     </div>
-    <div>
-        <button type="submit">Login</button>
-    </div>
-</form>
-{% endblock %}
+</main>
+{% include 'footer.html' %} {% endblock %}
